force-app/main/default/objects/Class_Transfer_Approvel__c/Class_Transfer_Approvel__c.object-meta.xml
<CustomObject>
    <label>Class Transfer Approval Request</label>
    <nameField>
        <displayFormat>CTAR-{000000}</displayFormat>
        <label>Class Transfer Approval Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Transfer Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>