force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Approved_On__c</fullName>
    <label>Approved On</label>
    <type>Date</type>
</CustomField>