force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <label>Consumer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>