force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>SFDC_Enrollment__c</referenceTo>
    <relationshipLabel>Class Transfer Approval Requests</relationshipLabel>
    <relationshipName>Class_Transfer_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>