force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Transfer_Description__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Description__c</fullName>
    <label>Transfer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>