force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Transferred_From_Class__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred From Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Class Transfer Approval Requests (Transferred From Class)</relationshipLabel>
    <relationshipName>Class_Transfer_Approval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>