force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Transferred_On__c.field-meta.xml
<CustomField>
    <fullName>Transferred_On__c</fullName>
    <formula>CreatedDate</formula>
    <label>Transferred On</label>
    <type>Date</type>
</CustomField>