force-app/main/default/objects/Class_Transfer_Approvel__c/fields/Transferred_To_Class__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred To Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Class Transfer Approval Requests</relationshipLabel>
    <relationshipName>Class_Transfer_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>