force-app/main/default/objects/Class_Transfer_Approvel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrollment__c</columns>
    <columns>Status__c</columns>
    <columns>Transfer_By__c</columns>
    <columns>Transferred_On__c</columns>
    <columns>Transfer_Description__c</columns>
    <columns>Transfer_Reason_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>