force-app/main/default/objects/Class_Transfer_Approvel__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Enrollment__c</columns>
    <columns>Status__c</columns>
    <columns>Transfer_Reason_Category__c</columns>
    <columns>Transfer_By__c</columns>
    <columns>Transferred_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>